fix(mobile): final fix on mobile site profile section

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -57,7 +57,10 @@ a {
   .author__urls-wrapper .btn {
     display: none !important;
   }
-
+  /* Remove the triangle arrow */
+  .author__urls-wrapper .author__urls::before {
+    display: none !important;
+  }
   /* Force the links list to render as a clean vertical block */
   .author__urls-wrapper .author__urls {
     display: block !important;
@@ -75,7 +78,7 @@ a {
   .author__urls-wrapper .author__urls li {
     display: block !important;
     width: 100% !important;
-    padding: 4px 0 !important;
+    padding: 2px 0 !important;
     margin: 0 !important;
   }
 
